# ZSWatch

./: .coderabbit.yaml  .gitignore  .gitmodules  404.html  GETTING_STARTED.md  LLEXT_IMPLEMENTATION_PLAN.md  LLEXT_PROGRESS.md  LLEXT_SPLIT_MODULE_PLAN.md  LLEXT_UPSTREAM_XIP_PLAN.md  README.md  app-editor.html  blog.html  hardware-viewer.html  index.html  markdown-page.html  privacy.html  sitemap.xml  update.html
.devcontainer/: .bashrc  .env  Dockerfile  README.md  devcontainer.json  init.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  test-only.yml  test.yml
app/: .gitignore  CMakeLists.txt  Kconfig  partition_zs.yml  pm_static.yml  pm_static_nrf5340dk_nrf5340.yml  pm_static_nrf5340dk_nrf5340_cpuapp.yml  pm_static_watchdk_nrf5340_cpuapp_1.yml  pm_static_zswatch_legacy_nrf5340_cpuapp_4.yml  prj.conf  sysbuild.conf  west.yml
app-builder/: DESIGN.md  Dockerfile  docker-compose.yml  requirements.txt
app-builder/deploy/: .gitignore  Dockerfile.dokku  Dockerfile.nginx  README.md  deploy.sh  docker-compose.prod.yml  dokku-setup.sh  nginx.conf
app-builder/server/: compiler.py  image_converter.py  main.py
app/boards/: da7212.conf  da7212_test.conf  da7212_test.overlay  debug.conf  native_posix.conf  native_sim_64.conf  native_sim_64.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  test_mode.conf  watchdk_nrf5340_cpuapp.conf  zswatch_legacy_nrf5340_cpuapp_4.conf  zswatch_legacy_nrf5340_cpuapp_5.conf  zswatch_nrf5340_cpuapp_4.conf  zswatch_nrf5340_cpuapp_5.conf
app/drivers/: CMakeLists.txt  Kconfig
app/lvgl_editor/: file_list_gen.cmake  globals.xml  lvgl_compat.h  lvgl_editor_gen.c  lvgl_editor_gen.h
app/pytest/: conftest.py  devices.yaml  mcumgr_utils.py  requirements.txt  screenshot_horizon.py  test_coredump.py  test_fs_log_backend.py  test_linux.py  test_native_app.py  test_watchface_bg.py  (+2 more)
app/src/applications/: CMakeLists.txt  Kconfig
app/src/applications/2048/: game_2048_app.c
app/src/applications/about/: CMakeLists.txt  about_app.c  about_ui.c
app/src/applications/battery/: CMakeLists.txt  battery_app.c  battery_ui.c  battery_ui.h
app/src/applications/calculator/: CMakeLists.txt  calculator_app.c  calculator_ui.c  calculator_ui.h  smf_calculator_thread.c  smf_calculator_thread.h
app/src/applications/calendar/: calendar_ui.c
app/src/applications/chat/: CMakeLists.txt  Kconfig  chat_app.c  chat_ui.c  chat_ui.h
app/src/applications/chronos/: chronos_app.c
app/src/applications/chronos/screens/: weather.c
app/src/applications/compass/: CMakeLists.txt  compass_app.c  compass_ui.c
app/src/applications/da7212_test/: CMakeLists.txt  da7212_test_app.c  da7212_test_ui.c  da7212_test_ui.h
app/src/applications/fitness/: fitness_app.c  fitness_ui.c
app/src/applications/flashlight/: flashlight_app.c
app/src/applications/hr/: CMakeLists.txt  hr_app.c
app/src/applications/info/: CMakeLists.txt  info_app.c  info_ui.c  info_ui.h
app/src/applications/lea_assistant/: CMakeLists.txt  lea_assistant_ui.c  message_handler.c  mock_webusb.h
app/src/applications/mic/: mic_app.c  mic_app_ui.c  spectrum_analyzer.c
app/src/applications/mic_test/: circular_spectrum_ui.c  circular_spectrum_ui.h  linear_spectrum_ui.c  linear_spectrum_ui.h  mic_test_app.c  mic_test_ui.c  mic_test_ui.h  spectrum_analyzer.c  spectrum_analyzer.h
app/src/applications/music_control/: music_control_app.c  music_control_ui.c
app/src/applications/notification/: notification_app.c  notification_ui.c  notification_ui.h
app/src/applications/notification/project/: notification.sll  notification.spj
app/src/applications/notification/ui_export/: CMakeLists.txt  notification_ui.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
app/src/applications/notification/ui_export/images/: ui_img_call_png.c  ui_img_gadget_png.c  ui_img_mail_png.c  ui_img_whatsapp_png.c
app/src/applications/notification/ui_export/screens/: notification_ui.c  ui_Home.c
app/src/applications/ppt_remote/: ppt_remote_app.c  ppt_remote_ui.c
app/src/applications/qr_code/: CMakeLists.txt  qr_code_app.c
app/src/applications/sensor_fusion/: fusion_app.c
app/src/applications/sensors_summary/: sensors_summary_app.c
app/src/applications/sensors_summary/ui/: sensors_summary_ui.c  sensors_summary_ui.h
app/src/applications/sensors_summary/ui/images/: ui_img_1463213690.c  ui_img_1479496048.c  ui_img_925774327.c
app/src/applications/sensors_summary/ui/screens/: ui_ScreenHome.c  ui_ScreenHumidity.c  ui_ScreenPressure.c  ui_ScreenTemperature.c
app/src/applications/settings/: settings_app.c  settings_ui.c
app/src/applications/speedometer/: speedometer_app.c  speedometer_ui.c
app/src/applications/stopwatch/: stopwatch_app.c
app/src/applications/timer/: timer_app.c  timer_ui.c
app/src/applications/trivia/: CMakeLists.txt  trivia_app.c  trivia_ui.c
app/src/applications/update/: CMakeLists.txt  update_app.c
app/src/applications/voice_memo/: CMakeLists.txt  Kconfig  voice_memo_app.c  voice_memo_quick_record.c  voice_memo_shell.c  voice_memo_store.c  voice_memo_store.h  voice_memo_ui.c  voice_memo_ui.h
app/src/applications/watchface/: Kconfig  watchface_app.c  watchface_app.h
app/src/applications/watchface_picker/: watchface_picker_app.c  watchface_picker_ui.c
app/src/applications/weather/: CMakeLists.txt  weather_app.c  weather_ui.c
app/src/applications/x_ray/: x_ray_app.c
app/src/applications/zds/: zds_app.c
app/src/codec/: CMakeLists.txt  zsw_audio_codec.c  zsw_audio_codec.h
blog/: archive.html  atom.xml  authors.html  devkit-ordering-llext-apps.html  dk-and-hr-integration.html  feedback.html  funding.html  intro.html  progress-devkit-prototype.html  progress-hr-fota.html  progress-hw-xip-usb-power.html  progress-xip-usb-ble-update.html  rss.xml  tags.html
docs/: hw-testing.html  intro.html
power_debug/: CMakeLists.txt  Kconfig
production_test/: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sysbuild.cmake  sysbuild.conf
website/: docusaurus.config.js  package-lock.json  package.json
zswatch-server/: railway.toml  requirements.txt
(+944 files in other folders)
